# Ignite_KnowledgeBase

./: .gitignore  BACKEND_SETUP.md  COMPLETE_SETUP_GUIDE.md  CONFLUENCE_EXTRACTOR_SETUP.md  CONFLUENCE_EXTRACTOR_TEST_ANALYSIS.md  CONFLUENCE_QUICK_START.md  DEPLOYMENT_GUIDE.md  DISABLE_EMAIL_CONFIRMATION.md  EXTRACTED_KEYWORDS.md  FINAL_STATUS.md  KEYWORDS_EXTRACTED.txt  KEYWORD_EXTRACTION_COMPLETE.md  KEYWORD_EXTRACTION_SUMMARY.md  KNOWLEDGE_BASE.md  MANUAL_CONFIRM_EMAIL.md  POSTMAN_API_GUIDE.md  PRE_COMPLETION_CHECKLIST.md  QUICK_DEPLOY.md  RBAC_FUNCTIONALITY_CHECK.md  RBAC_IMPLEMENTATION_PLAN.md  RBAC_SETUP_INSTRUCTIONS.md  RBAC_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_SUMMARY.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  SETUP_GUIDE.md  SLACK_EXTRACTOR_TEST_ANALYSIS.md  SLACK_THREAD_KEYWORDS.md  VERIFICATION_REPORT.md  clean_csv_export.py  confluence_knowledge_extractor.py  confluence_knowledge_extractor_original_backup.py  debug_confluence_html.py  env.example  insert_keywords.sql  insert_with_auth.py  install.sh  run_app.sh  (+12 more)
backend/: KEYWORDS_EXTRACTED.md  README.md  insert_keywords.sql  pyproject.toml
backend/app/: auth.py  main.py  main_original_backup.py  main_refactored.py  models.py
backend/app/services/: ai_service.py  export_service.py  user_service.py
backend/app/utils/: __init__.py  ai_summarization.py  api_clients.py  date_utils.py  text_processing.py
frontend/: .env.local  README.md  next.config.js  package-lock.json  package.json
slack-knowledge-extractor-local/: env.example  slack_extractor_wrapper.sh  (+1 more)
(+69 files in other folders)
