[tool.poetry]
name = "ignite-knowledge-backend"
version = "0.1.0"
description = "FastAPI backend for exports and activity logs"
authors = ["Ignite Team <team@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
python-dotenv = "^1.0.1"
supabase = "^2.6.0"
httpx = "^0.27.0"
orjson = "^3.10.7"
reportlab = "^4.2.2"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

